--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -70,3 +70,12 @@ header, footer {
 table {
     border-collapse: collapse;
 }
+
+.ship {
+    position: absolute;
+    z-index: 2;
+    border: 2px solid #00F;
+    background:rgba(0,0,255,.05);
+    left: 0;
+    top: 0;
+}
