Edit cell-drop to box-shadow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -81,7 +81,7 @@ table {
 }
 
 .cell-droppable {
-    border: 2px solid #9ab118;
+    box-shadow:inset 0px 0px 0px 2px #9ab118;
     padding: 0;
 }
 
