--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -98,6 +98,14 @@ table {
     color: var(--awaiting-colour-text);
 }
 
+.awaiting-placement:after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: "drag ship to move, double click to rotate";
+    background-color: #9ab118;
+}
+
 .awaiting-placement table {
     opacity: 0.3;
 }
